@startuml

title __DEVICELYTICS's Class Diagram__\n

  namespace com.fonzp.configuration {
    class com.fonzp.configuration.AppConfig {
    }
  }
  

  namespace com.fonzp.controller {
    class com.fonzp.controller.Index {
    }
  }
  

  namespace com.fonzp.controller {
    class com.fonzp.controller.LoadDataset {
    }
  }
  

  namespace com.fonzp.controller {
    class com.fonzp.controller.LogGetter {
    }
  }
  

  namespace com.fonzp.controller {
    class com.fonzp.controller.ModelPrediction {
    }
  }
  

  namespace com.fonzp.controller {
    class com.fonzp.controller.ModelTrainer {
    }
  }
  

  namespace com.fonzp.controller {
    class com.fonzp.controller.VarsGetter {
    }
  }
  

  namespace com.fonzp.main {
    class com.fonzp.main.Main {
    }
  }
  

  namespace com.fonzp.service {
    abstract class com.fonzp.service.DatabaseTask {
    }
  }
  

  namespace com.fonzp.service {
    abstract class com.fonzp.service.Task {
    }
  }
  

  namespace com.fonzp.service {
    namespace prediction {
      abstract class com.fonzp.service.prediction.AbstractPrediction {
      }
    }
  }
  

  namespace com.fonzp.service {
    namespace prediction {
      class com.fonzp.service.prediction.Prediction {
      }
    }
  }
  

  namespace com.fonzp.service {
    namespace prediction {
      class com.fonzp.service.prediction.TrainClassifier {
      }
    }
  }
  

  namespace com.fonzp.task {
    class com.fonzp.task.ArffBuilder {
    }
  }
  

  namespace com.fonzp.task {
    class com.fonzp.task.CSVExporter {
    }
  }
  

  namespace com.fonzp.task {
    class com.fonzp.task.ModelEnrichment {
    }
  }
  

  com.fonzp.service.DatabaseTask -up-|> com.fonzp.service.Task
  com.fonzp.service.prediction.AbstractPrediction -up-|> com.fonzp.service.DatabaseTask
  com.fonzp.service.prediction.Prediction -up-|> com.fonzp.service.prediction.AbstractPrediction
  com.fonzp.service.prediction.TrainClassifier -up-|> com.fonzp.service.prediction.AbstractPrediction
  com.fonzp.task.ArffBuilder -up-|> com.fonzp.service.DatabaseTask
  com.fonzp.task.CSVExporter -up-|> com.fonzp.service.DatabaseTask
  com.fonzp.task.ModelEnrichment -up-|> com.fonzp.service.DatabaseTask


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
